# entangl

./: .gitignore  README.md  demo.py  pyproject.toml
core/: crypto.py
qkd/: bb84.py
registry/: agent_registry.py
sdk/: __init__.py
sdk/examples/: integration_test.py
sdk/python/: agent.py  server.py
transport/: secure_channel.py
