[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "entangl"
version = "0.1.0"
description = "Entangl — Post-quantum secure communication protocol for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["quantum", "cryptography", "agents", "post-quantum", "AI", "security"]

[tool.setuptools.packages.find]
where = [".."]
include = ["entangl*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
